--- a/src/content/posts/the-modern-tech-professionals-learning-stack-a-2025-guide.mdx
+++ b/src/content/posts/the-modern-tech-professionals-learning-stack-a-2025-guide.mdx
@@ -15,6 +15,14 @@ You've heard the headlines and the growing anxiety in the workplace: "AI is comi
 
 For developers, this means using tools like [GitHub Copilot](https://github.com/features/copilot) to accelerate coding. For project managers, it means using AI to forecast timelines and allocate resources. For business analysts, it means leveraging AI to uncover deeper insights from data. The [World Economic Forum's latest "Future of Jobs" report](https://www.weforum.org/publications/the-future-of-jobs-report-2023/) underscores this, predicting that a staggering 44% of core job skills will be disrupted in the next five years. The need to upskill is universal.
 
+<iframe 
+  src="/images/blog/the-modern-tech-professionals-learning-stack-a-2025-guide/key-stats-infographic.html" 
+  width="100%" 
+  height="600" 
+  frameborder="0" 
+  style="border-radius: 10px; margin: 2rem 0;">
+</iframe>
+
 As someone with professional experience as a developer, a project manager, and a business analyst, I've seen this shift from all sides. That's why I've created this guide. This is the first in an eight-part series designed to be a no-nonsense look at the top learning platforms from a holistic tech team perspective. We'll cut through the marketing fluff and focus on what truly builds practical, job-relevant skills.
 
 Most importantly, we will embrace the concept of a "Learning Stack." The era of relying on a single source for knowledge is over. The modern tech professional needs a versatile, curated toolkit of different platforms for different tasks. This post is your high-level map of the terrain. In the coming weeks, we will dive deep into each platform individually.
@@ -57,6 +65,14 @@ The savvy professional cherry-picks the best platform for the specific skill the
 ## 3. The Contenders: A High-Level Introduction
 
 Now, let's meet the platforms that will form the core of our learning stack. Each has a distinct personality and a clear role to play for everyone on the team.
+
+<iframe 
+  src="/images/blog/the-modern-tech-professionals-learning-stack-a-2025-guide/platforms-overview-infographic.html" 
+  width="100%" 
+  height="800" 
+  frameborder="0" 
+  style="border-radius: 10px; margin: 2rem 0;">
+</iframe>
 
 ### Udemy: The Digital Supermarket
 
@@ -138,18 +154,27 @@ I'm well aware that other excellent platforms exist, such as [Udacity](https://w
 
 Here is a simple table to summarize our contenders based on the framework above.
 
-| Platform | Primary Pricing Model | Approach | Best For... | Killer Feature |
-|----------|----------------------|----------|-------------|----------------|
-| Udemy | Pay-Per-Course | Mostly Practical | Specific tool training (Dev, PM, BA) | Huge variety & frequent sales |
-| Pluralsight | Subscription | Highly Practical | Serious developer upskilling, cloud certs | Real Cloud Sandboxes (ACG) |
-| LinkedIn Learning | Subscription | Practical | Project Management & Soft Skills | Integration with LinkedIn Profile |
-| DataCamp | Subscription | Extremely Practical | Business/Data Analysts, Python/R/SQL | Interactive, in-browser exercises |
-| Coursera | Subscription / Course | Balanced | Formal Certificates (PM, BA, Dev) | University-backed credentials |
-| Codecademy | Freemium / Subscription | Extremely Practical | Absolute beginner coders, basic syntax | Interactive, text-based learning |
+<iframe 
+  src="/images/blog/the-modern-tech-professionals-learning-stack-a-2025-guide/comparison-table-infographic.html" 
+  width="100%" 
+  height="700" 
+  frameborder="0" 
+  style="border-radius: 10px; margin: 2rem 0;">
+</iframe>
+
+
 
 ## 5. Building Your Learning Stack: My Personal Playbook
 
 Theory and comparison tables are useful, but real-world application is what matters. To get the best results, I never rely on a single platform. Instead, I build a custom learning stack tailored to my specific goal. Here are some of my battle-tested combinations:
+
+<iframe 
+  src="/images/blog/the-modern-tech-professionals-learning-stack-a-2025-guide/stack-combinations-infographic.html" 
+  width="100%" 
+  height="700" 
+  frameborder="0" 
+  style="border-radius: 10px; margin: 2rem 0;">
+</iframe>
 
 ### Goal: Mastering Data Skills (for BA/Data Science Roles)
 
