--- a/src/content/posts/the-modern-tech-professionals-learning-stack-a-2025-guide.mdx
+++ b/src/content/posts/the-modern-tech-professionals-learning-stack-a-2025-guide.mdx
@@ -5,9 +5,20 @@ authorId: "quan-nguyen"
 publishDate: "2025-06-27"
 category: "The Wanderer's Playbook"
 readTime: "15 min read"
-image: "/images/blog/shared/hero-learning-stack.jpg"
+image: "/images/blog/the-modern-tech-professionals-learning-stack-a-2025-guide/hero-learning-stack.jpg"
 tags: ["Learning", "Professional Development", "Udemy", "Pluralsight", "LinkedIn Learning", "DataCamp", "Coursera", "Codecademy", "Tech Skills"]
 ---
+
+import { Image } from 'astro:assets';
+import heroImage from '/public/images/blog/the-modern-tech-professionals-learning-stack-a-2025-guide/hero-learning-stack.jpg';
+
+<Image 
+  src={heroImage} 
+  alt="The Modern Tech Professional's Learning Stack - A comprehensive guide to building the perfect learning stack for developers, project managers, and business analysts" 
+  width={1200} 
+  height={630} 
+  class="w-full rounded-lg mb-8"
+/>
 
 ## 1. Introduction: The AI Elephant in the Room
 
