using image instead of infographic for mobile friendly

--- a/src/content/posts/the-modern-tech-professionals-learning-stack-a-2025-guide.mdx
+++ b/src/content/posts/the-modern-tech-professionals-learning-stack-a-2025-guide.mdx
@@ -11,6 +11,12 @@ tags: ["Learning", "Professional Development", "Udemy", "Pluralsight", "LinkedIn
 
 import { Image } from 'astro:assets';
 import heroImage from '/public/images/blog/the-modern-tech-professionals-learning-stack-a-2025-guide/hero-learning-stack.jpg';
+import keyStatsImage from '/public/images/blog/the-modern-tech-professionals-learning-stack-a-2025-guide/key-stats-infographic.jpg';
+import platformsOverviewImage1 from '/public/images/blog/the-modern-tech-professionals-learning-stack-a-2025-guide/platforms-overview-infographic part 1.jpg';
+import platformsOverviewImage2 from '/public/images/blog/the-modern-tech-professionals-learning-stack-a-2025-guide/platforms-overview-infographic part 2.jpg';
+import comparisonTableImage from '/public/images/blog/the-modern-tech-professionals-learning-stack-a-2025-guide/comparison-table-infographic.jpg';
+import stackCombinationsImage1 from '/public/images/blog/the-modern-tech-professionals-learning-stack-a-2025-guide/stack-combinations-infographic part 1.jpg';
+import stackCombinationsImage2 from '/public/images/blog/the-modern-tech-professionals-learning-stack-a-2025-guide/stack-combinations-infographic part 2.jpg';
 
 <Image 
   src={heroImage} 
@@ -26,13 +32,13 @@ You've heard the headlines and the growing anxiety in the workplace: "AI is comi
 
 For developers, this means using tools like [GitHub Copilot](https://github.com/features/copilot) to accelerate coding. For project managers, it means using AI to forecast timelines and allocate resources. For business analysts, it means leveraging AI to uncover deeper insights from data. The [World Economic Forum's latest "Future of Jobs" report](https://www.weforum.org/publications/the-future-of-jobs-report-2023/) underscores this, predicting that a staggering 44% of core job skills will be disrupted in the next five years. The need to upskill is universal.
 
-<iframe 
-  src="/infographics/blog/the-modern-tech-professionals-learning-stack-a-2025-guide/key-stats-infographic.html" 
-  width="100%" 
-  height="1100" 
-  frameborder="0" 
-  style="border-radius: 10px; margin: 2rem 0;">
-</iframe>
+<Image 
+  src={keyStatsImage} 
+  alt="Key Statistics Infographic - Learning and AI adoption trends in tech industry" 
+  width={800} 
+  height={1100} 
+  class="w-full rounded-lg my-8"
+/>
 
 As someone with professional experience as a developer, a project manager, and a business analyst, I've seen this shift from all sides. That's why I've created this guide. This is the first in an eight-part series designed to be a no-nonsense look at the top learning platforms from a holistic tech team perspective. We'll cut through the marketing fluff and focus on what truly builds practical, job-relevant skills.
 
@@ -77,13 +83,21 @@ The savvy professional cherry-picks the best platform for the specific skill the
 
 Now, let's meet the platforms that will form the core of our learning stack. Each has a distinct personality and a clear role to play for everyone on the team.
 
-<iframe 
-  src="/infographics/blog/the-modern-tech-professionals-learning-stack-a-2025-guide/platforms-overview-infographic.html" 
-  width="100%" 
-  height="3250" 
-  frameborder="0" 
-  style="border-radius: 10px; margin: 2rem 0;">
-</iframe>
+<Image 
+  src={platformsOverviewImage1} 
+  alt="Platforms Overview Infographic Part 1 - Learning platforms comparison for tech professionals" 
+  width={800} 
+  height={1600} 
+  class="w-full rounded-lg my-4"
+/>
+
+<Image 
+  src={platformsOverviewImage2} 
+  alt="Platforms Overview Infographic Part 2 - Learning platforms comparison for tech professionals" 
+  width={800} 
+  height={1600} 
+  class="w-full rounded-lg my-4"
+/>
 
 ### Udemy: The Digital Supermarket
 
@@ -165,13 +179,13 @@ I'm well aware that other excellent platforms exist, such as [Udacity](https://w
 
 Here is a simple table to summarize our contenders based on the framework above.
 
-<iframe 
-  src="/infographics/blog/the-modern-tech-professionals-learning-stack-a-2025-guide/comparison-table-infographic.html" 
-  width="100%" 
-  height="2300" 
-  frameborder="0" 
-  style="border-radius: 10px; margin: 2rem 0;">
-</iframe>
+<Image 
+  src={comparisonTableImage} 
+  alt="Comparison Table Infographic - Learning platforms comparison matrix for tech professionals" 
+  width={800} 
+  height={2300} 
+  class="w-full rounded-lg my-8"
+/>
 
 
 
@@ -179,13 +193,21 @@ Here is a simple table to summarize our contenders based on the framework above.
 
 Theory and comparison tables are useful, but real-world application is what matters. To get the best results, I never rely on a single platform. Instead, I build a custom learning stack tailored to my specific goal. Here are some of my battle-tested combinations:
 
-<iframe 
-  src="/infographics/blog/the-modern-tech-professionals-learning-stack-a-2025-guide/stack-combinations-infographic.html" 
-  width="100%" 
-  height="2900" 
-  frameborder="0" 
-  style="border-radius: 10px; margin: 2rem 0;">
-</iframe>
+<Image 
+  src={stackCombinationsImage1} 
+  alt="Stack Combinations Infographic Part 1 - Learning stack combinations for different goals" 
+  width={800} 
+  height={1400} 
+  class="w-full rounded-lg my-4"
+/>
+
+<Image 
+  src={stackCombinationsImage2} 
+  alt="Stack Combinations Infographic Part 2 - Learning stack combinations for different goals" 
+  width={800} 
+  height={1500} 
+  class="w-full rounded-lg my-4"
+/>
 
 ### Goal: Mastering Data Skills (for BA/Data Science Roles)
 
