Add Udemy review infographic and update blog post
Added new images and an interactive HTML infographic for 'The Skill-Wanderer's Playbook: A Deep Dive Review of Udemy'. Updated the related MDX blog post with references to the infographic, improved editorial independence statements, and added more external resource links for clarity and transparency.

--- a/src/content/posts/the-skill-wanderers-playbook-a-deep-dive-review-of-udemy.mdx
+++ b/src/content/posts/the-skill-wanderers-playbook-a-deep-dive-review-of-udemy.mdx
@@ -10,7 +10,7 @@ tags: ["Learning", "Professional Development", "Udemy", "Learning Stack", "Tech 
 ---
 
 import { Image } from 'astro:assets';
-import heroImage from '/public/images/blog/the-skill-wanderers-playbook-a-deep-dive-review-of-udemy/hero.jpg';
+import heroImage from '../../../public/images/blog/the-skill-wanderers-playbook-a-deep-dive-review-of-udemy/hero.jpg';
 
 <Image 
   src={heroImage} 
@@ -23,6 +23,14 @@ import heroImage from '/public/images/blog/the-skill-wanderers-playbook-a-deep-d
 Welcome back to the Skill-Wanderer's Playbook, the series where we build the ultimate learning stack for the modern tech professional. In our [first post](/blog/the-modern-tech-professionals-learning-stack-a-2025-guide), we established a crucial principle: in a world of rapid change, relying on a single learning platform is a losing strategy. The key to career longevity and agility is to build a personal "learning stack," using the right tool for the right job.
 
 Today, we're doing our first deep dive, and we're starting with the biggest and most chaotic tool in the shed: **Udemy**.
+
+> **🎯 Quick Reference:** Want a visual summary of this entire playbook? Check out our [interactive infographic](/infographics/blog/the-skill-wanderers-playbook-a-deep-dive-review-of-udemy/udemy-playbook-infographic.html) for all the key strategies, rules, and insights at a glance.
+
+---
+
+**Editorial Independence:** This review is completely independent. I have not received any compensation, sponsorship, or free products from Udemy or any platform mentioned. All opinions are my own, based on personal experience with courses I purchased myself. Read more about my [editorial integrity principles](https://skill-wanderer.com/principles/integrity).
+
+---
 
 ## When Should You Consider Udemy? A Quick Guide
 
@@ -54,7 +62,7 @@ So, this post is the official playbook for navigating Udemy. It's my strategic g
 
 ## Understanding the Udemy Model: The Blessing and Curse of the Open Marketplace
 
-To use Udemy effectively, you must first understand its business model, because it explains everything about the platform's nature. Unlike curated services like Pluralsight or Coursera, Udemy is a true open marketplace.
+To use Udemy effectively, you must first understand its business model, because it explains everything about the platform's nature. Unlike curated services like [Pluralsight](https://www.pluralsight.com) or [Coursera](https://www.coursera.org), [Udemy](https://www.udemy.com) is a true open marketplace.
 
 This means that anyone, from a world-renowned expert to a hobbyist with a webcam, can create a course, set a price, and upload it to the platform. Udemy acts as the host and the storefront, taking a percentage of the sale in exchange. This single decision is the source of both Udemy's greatest strengths and its most significant weaknesses.
 
@@ -96,7 +104,7 @@ Since you can't always trust the star rating at face value, you must investigate
 
 **Instructor Profile:** Always click on the instructor's name. Do they have a professional background and other highly-rated courses? A strong external presence (like a personal blog or GitHub) is a massive green flag.
 
-**Course Content & Preview Videos:** Check the "Last Updated" date to ensure the content is recent. Watch several of the free preview lectures. Is the teaching style a good fit? Is the audio crisp and clear? If you get a bad feeling, trust your gut and move on.
+**Course Content & Preview Videos:** Check the "Last Updated" date to ensure the content is recent. Watch several of the free preview lectures. Is the teaching style a good fit? Is the audio crisp and clear? If you get a bad feeling, trust your gut and move on. **Important:** Check the course was updated recently. Don't enroll in dead courses that haven't been updated in years.
 
 ### Rule #3: Beware the "Mega-Bootcamp" Trap.
 
@@ -104,7 +112,7 @@ It's tempting to buy a single 80-hour course that promises to teach you "everyth
 
 ### Rule #4: Build a Structured Learning Path (Don't Use Udemy Alone).
 
-If you are the type of person who truly wants to master a topic, do not use Udemy alone. While the practical side is great, it lacks the fundamental theory that will serve you well for the long term. You should couple Udemy with more theoretical platforms. My personal preference is to use Coursera or Pluralsight for the core structure, or even free resources like MIT OpenCourseWare. If you have the budget, edX or Udacity are also strong options. Normally, Udemy serves me as my supplement to a structured learning path from one of those platforms. If you don't, you risk going down the path of failure like I did with my TensorFlow course.
+If you are the type of person who truly wants to master a topic, do not use Udemy alone. While the practical side is great, it lacks the fundamental theory that will serve you well for the long term. You should couple Udemy with more theoretical platforms. My personal preference is to use [Coursera](https://www.coursera.org) or [Pluralsight](https://www.pluralsight.com) for the core structure, or even free resources like [MIT OpenCourseWare](https://ocw.mit.edu). If you have the budget, [edX](https://www.edx.org) or [Udacity](https://www.udacity.com) are also strong options. Normally, Udemy serves me as my supplement to a structured learning path from one of those platforms. If you don't, you risk going down the path of failure like I did with my TensorFlow course.
 
 ### Rule #5: Use Your 30-Day "Safety Net" Wisely.
 
@@ -118,9 +126,9 @@ Your time is your most valuable asset. Treat it that way. Udemy's video player i
 
 **For Developers:** Udemy is a developer's paradise for practical, project-based learning. It excels at teaching you a specific library, framework, or tool. Look for courses with titles like, "Build a Full-Stack E-commerce App with the MERN Stack," or "Mastering Docker and Kubernetes from Scratch."
 
-**For Project Managers:** While other platforms are stronger for PM methodologies, Udemy is an absolute goldmine for affordable, tool-specific training on software like Jira, Asana, or Microsoft Project.
+**For Project Managers:** While other platforms are stronger for PM methodologies, Udemy is an absolute goldmine for affordable, tool-specific training on software like [Jira](https://www.atlassian.com/software/jira), [Asana](https://asana.com), or [Microsoft Project](https://www.microsoft.com/en-us/microsoft-365/project/project-management-software).
 
-**For Business Analysts:** Like PMs, BAs can find immense value in practical courses on essential data visualization tools like Tableau or Power BI, or for mastering modeling languages like UML and BPMN.
+**For Business Analysts:** Like PMs, BAs can find immense value in practical courses on essential data visualization tools like [Tableau](https://www.tableau.com) or [Power BI](https://powerbi.microsoft.com), or for mastering modeling languages like UML and BPMN.
 
 ## Stacking Udemy: How It Plays with Others
 
@@ -132,11 +140,11 @@ Back in my university days, my Java course was very theoretical. To truly master
 
 ### The "Holistic Understanding" Stack
 
-When I needed to learn Behavior-Driven Development (BDD), I wanted to understand it from all angles. I used Udemy for a practical, hands-on course to learn the implementation. I then used Pluralsight to understand the high-level concepts and how BDD fits into a modern DevOps workflow. Finally, I used LinkedIn Learning to understand the why—the business case for BDD and how to communicate its value to stakeholders. This 360-degree view gave me a much deeper understanding than any single platform could have.
+When I needed to learn Behavior-Driven Development (BDD), I wanted to understand it from all angles. I used Udemy for a practical, hands-on course to learn the implementation. I then used [Pluralsight](https://www.pluralsight.com) to understand the high-level concepts and how BDD fits into a modern DevOps workflow. Finally, I used [LinkedIn Learning](https://www.linkedin.com/learning) to understand the why—the business case for BDD and how to communicate its value to stakeholders. This 360-degree view gave me a much deeper understanding than any single platform could have.
 
 ### The "Intern Bootstrap" Stack
 
-When onboarding new interns, I've found a combination of Codecademy and Udemy to be incredibly effective. I start them on Codecademy to learn the absolute fundamentals of a language like JavaScript or Java in a low-pressure, interactive environment. Once they have the syntax down, I move them to a project-based course on Udemy to build a full application, like a React or Java Spring project. This successfully bootstraps them from basic syntax to real-world application development.
+When onboarding new interns, I've found a combination of [Codecademy](https://www.codecademy.com) and Udemy to be incredibly effective. I start them on Codecademy to learn the absolute fundamentals of a language like JavaScript or Java in a low-pressure, interactive environment. Once they have the syntax down, I move them to a project-based course on Udemy to build a full application, like a React or Java Spring project. This successfully bootstraps them from basic syntax to real-world application development.
 
 ### The "Cross-Discipline" Stack
 
@@ -149,6 +157,16 @@ When I was transitioning into a Business Analyst role for a company that built B
 Udemy is not a prestigious university or a curated professional training academy. It's a massive, chaotic, and wonderful digital library. Your success on the platform depends entirely on your ability to be a savvy, critical consumer. If you randomly buy courses based on catchy titles, you will be disappointed. But if you treat it like a strategic tool, it's indispensable.
 
 It is the ultimate utility player in your learning stack. It's not the star quarterback that designs your entire strategy from start to finish. Instead, it's the versatile player you can call on to fill any specific gap in your knowledge. When you wait for a sale and follow the playbook for finding quality content, Udemy consistently delivers an incredible amount of value for an almost trivial price.
+
+---
+
+## Editorial Independence & Transparency
+
+**Important Disclaimer:** I have not received any compensation, sponsorship, or free products from Udemy or any other platform mentioned in this review. All courses referenced were purchased with my own money during regular sales. My opinions are entirely my own, based on years of personal experience as a learning professional.
+
+I am committed to providing honest, unbiased reviews that serve your learning journey, not corporate interests. You can read more about my commitment to editorial integrity and independent analysis at: [https://skill-wanderer.com/principles/integrity](https://skill-wanderer.com/principles/integrity)
+
+---
 
 ## What's Next in the Playbook?
 
