Add infographics to Udemy deep dive review post
Inserted multiple <Image> components throughout the article to visually illustrate key sections, including guides, marketplace model, shopping strategies, role-based breakdowns, platform stacking, and the final verdict. These additions enhance the post's clarity and engagement by providing relevant infographics for each major topic.

--- a/src/content/posts/the-skill-wanderers-playbook-a-deep-dive-review-of-udemy.mdx
+++ b/src/content/posts/the-skill-wanderers-playbook-a-deep-dive-review-of-udemy.mdx
@@ -34,6 +34,14 @@ Today, we're doing our first deep dive, and we're starting with the biggest and 
 
 ## When Should You Consider Udemy? A Quick Guide
 
+<Image 
+  src="/images/blog/the-skill-wanderers-playbook-a-deep-dive-review-of-udemy/When-Should-You-Consider- Udemy-A-Quick -Guide.jpg" 
+  alt="When Should You Consider Udemy? A Quick Guide - Infographic showing 6 key scenarios for using Udemy effectively" 
+  width={1200} 
+  height={800} 
+  class="w-full rounded-lg mb-6"
+/>
+
 Before we get into the weeds, let's start with the bottom line. Who is this platform for? From my experience, you should strongly consider using Udemy for your learning when:
 
 1. **You need to learn a specific tool or technology right now.** This isn't just for developers. I've successfully used Udemy to learn everything from how to effectively use LinkedIn for professional networking to complex business strategy frameworks like the Balanced Scorecard.
@@ -62,6 +70,14 @@ So, this post is the official playbook for navigating Udemy. It's my strategic g
 
 ## Understanding the Udemy Model: The Blessing and Curse of the Open Marketplace
 
+<Image 
+  src="/images/blog/the-skill-wanderers-playbook-a-deep-dive-review-of-udemy/The-Blessing-and-Curse-of-the-Open-Marketplace.jpg" 
+  alt="Understanding the Udemy Model: The Blessing and Curse of the Open Marketplace - Infographic explaining Udemy's open marketplace model" 
+  width={1200} 
+  height={800} 
+  class="w-full rounded-lg mb-6"
+/>
+
 To use Udemy effectively, you must first understand its business model, because it explains everything about the platform's nature. Unlike curated services like [Pluralsight](https://www.pluralsight.com) or [Coursera](https://www.coursera.org), [Udemy](https://www.udemy.com) is a true open marketplace.
 
 This means that anyone, from a world-renowned expert to a hobbyist with a webcam, can create a course, set a price, and upload it to the platform. Udemy acts as the host and the storefront, taking a percentage of the sale in exchange. This single decision is the source of both Udemy's greatest strengths and its most significant weaknesses.
@@ -89,6 +105,14 @@ I should mention that I've also heard about Udemy Business, which is a subscript
 If you are an individual playing by my book, the pricing advice is paramount. However, if your company provides you with a Udemy Business account, you are in luck! You can ignore all my advice about waiting for sales and vetting prices. The core strategy of mixing and matching platforms to build the best possible learning stack, however, remains exactly the same.
 
 ## The Playbook for Finding Gems: How to Shop Smart on Udemy
+
+<Image 
+  src="/images/blog/the-skill-wanderers-playbook-a-deep-dive-review-of-udemy/How-to-Shop-Smart-on-Udemy.jpg" 
+  alt="The Playbook for Finding Gems: How to Shop Smart on Udemy - Infographic showing the 6 golden rules for Udemy success" 
+  width={1200} 
+  height={800} 
+  class="w-full rounded-lg mb-6"
+/>
 
 Navigating Udemy is a skill in itself. Over the years, I've developed a strict set of rules that I follow to maximize value and avoid buyer's remorse. Treat this as your personal shopping algorithm.
 
@@ -124,6 +148,14 @@ Your time is your most valuable asset. Treat it that way. Udemy's video player i
 
 ## Udemy for the Tech Team: A Role-Based Breakdown
 
+<Image 
+  src="/images/blog/the-skill-wanderers-playbook-a-deep-dive-review-of-udemy/A-Role-Based-Breakdown.jpg" 
+  alt="Udemy for the Tech Team: A Role-Based Breakdown - Infographic showing how developers, project managers, and business analysts can use Udemy" 
+  width={1200} 
+  height={800} 
+  class="w-full rounded-lg mb-6"
+/>
+
 **For Developers:** Udemy is a developer's paradise for practical, project-based learning. It excels at teaching you a specific library, framework, or tool. Look for courses with titles like, "Build a Full-Stack E-commerce App with the MERN Stack," or "Mastering Docker and Kubernetes from Scratch."
 
 **For Project Managers:** While other platforms are stronger for PM methodologies, Udemy is an absolute goldmine for affordable, tool-specific training on software like [Jira](https://www.atlassian.com/software/jira), [Asana](https://asana.com), or [Microsoft Project](https://www.microsoft.com/en-us/microsoft-365/project/project-management-software).
@@ -131,6 +163,14 @@ Your time is your most valuable asset. Treat it that way. Udemy's video player i
 **For Business Analysts:** Like PMs, BAs can find immense value in practical courses on essential data visualization tools like [Tableau](https://www.tableau.com) or [Power BI](https://powerbi.microsoft.com), or for mastering modeling languages like UML and BPMN.
 
 ## Stacking Udemy: How It Plays with Others
+
+<Image 
+  src="/images/blog/the-skill-wanderers-playbook-a-deep-dive-review-of-udemy/Stacking-Udemy.jpg" 
+  alt="Stacking Udemy: How It Plays with Others - Infographic showing proven strategies for combining Udemy with other learning platforms" 
+  width={1200} 
+  height={800} 
+  class="w-full rounded-lg mb-6"
+/>
 
 Udemy shines brightest not as a standalone platform, but as a flexible component in a larger learning stack. Here are a few concrete examples from my own career:
 
@@ -151,6 +191,14 @@ When onboarding new interns, I've found a combination of [Codecademy](https://ww
 When I was transitioning into a Business Analyst role for a company that built Business Planning Software, I needed to learn the business domain fast. I used a course on Udemy to learn the Balanced Scorecard framework. I supplemented this with several books on business strategy that were recommended by my mentor. This combination of a practical online course and classic, curated reading material allowed me to quickly get up to speed on a complex business topic.
 
 ## The Final Verdict: Is Udemy Worth Your Time and Money?
+
+<Image 
+  src="/images/blog/the-skill-wanderers-playbook-a-deep-dive-review-of-udemy/The-Final-Verdict.jpg" 
+  alt="The Final Verdict: Is Udemy Worth Your Time and Money? - Infographic summarizing the key takeaways and final recommendation" 
+  width={1200} 
+  height={800} 
+  class="w-full rounded-lg mb-6"
+/>
 
 **Yes, absolutely—if you use it correctly.**
 
