--- a/src/content/posts/the-wanderers-log-1-the-heart-of-the-mission-the-skill-wanderer-platform-is-live.mdx
+++ b/src/content/posts/the-wanderers-log-1-the-heart-of-the-mission-the-skill-wanderer-platform-is-live.mdx
@@ -47,7 +47,7 @@ We believe that the people who improve the most are those who discover their own
 
 ## The Platform is Ready: A Tour of the MVP
 
-<img src="../../../public/images/blog/the-wanderers-log-1-the-heart-of-the-mission-the-skill-wanderer-platform-is-live/A-Tour-of-the-MVP.svg" alt="A Tour of the MVP - Skill-Wanderer Platform Technology Stack" class="w-full h-auto rounded-lg shadow-lg mb-6" />
+<img src="/images/blog/the-wanderers-log-1-the-heart-of-the-mission-the-skill-wanderer-platform-is-live/A-Tour-of-the-MVP.svg" alt="A Tour of the MVP - Skill-Wanderer Platform Technology Stack" class="w-full h-auto rounded-lg shadow-lg mb-6" />
 
 This mission is now backed by running code. The current platform is the result of strategic development choices focused on performance, security, and laying a robust foundation for a scalable future. Here's a look under the hood:
 
