Rename 'Home Lab' to 'Home Data Center' in blog assets
Updated references from 'Home Lab Infrastructure' to 'Home Data Center Infrastructure' in SVG, HTML infographic, and blog post MDX. Renamed the SVG file and adjusted tags and headings for consistency across the blog post and related assets.

--- a/src/content/posts/the-wanderers-log-1-the-heart-of-the-mission-the-skill-wanderer-platform-is-live.mdx
+++ b/src/content/posts/the-wanderers-log-1-the-heart-of-the-mission-the-skill-wanderer-platform-is-live.mdx
@@ -6,7 +6,7 @@ publishDate: "2025-07-27"
 category: "Skill-Wanderer Journey"
 readTime: "12 min read"
 image: "/images/blog/the-wanderers-log-1-the-heart-of-the-mission-the-skill-wanderer-platform-is-live/hero.jpg"
-tags: ["Skill-Wanderer", "Platform Launch", "MVP", "Mission", "Trust", "Accessibility", "Home Lab", "Kubernetes"]
+tags: ["Skill-Wanderer", "Platform Launch", "MVP", "Mission", "Trust", "Accessibility", "Home Data Center", "Kubernetes"]
 ---
 
 _Disclaimer: I am not affiliated with any of the brands or products mentioned in this post, and I do not receive any compensation for the links provided. These links are included solely for your convenience to help you find more information._
@@ -71,10 +71,10 @@ In the spirit of transparency, our current backend needs, like forms, are being 
 ### What's Next: Community Microservice
 Following the MVP launch, our immediate next priority is developing a dedicated community microservice. This will serve as the social backbone of our platform, enabling peer-to-peer learning, mentorship connections, and collaborative project spaces. The community service will integrate seamlessly with our existing Keycloak SSO system and complement our educational offerings.
 
-## Our Humble Abode: The Home Lab Infrastructure
+## Our Humble Abode: The Home Data Center Infrastructure
 
 
-<img src="/images/blog/the-wanderers-log-1-the-heart-of-the-mission-the-skill-wanderer-platform-is-live/The-Home-Lab-Infrastructure.svg" alt="The Home Lab Infrastructure - Kubernetes Cluster Setup" class="w-full h-auto rounded-lg shadow-lg mb-6" />
+<img src="/images/blog/the-wanderers-log-1-the-heart-of-the-mission-the-skill-wanderer-platform-is-live/The-Home-Data-Center-Infrastructure.svg" alt="The Home Data Center Infrastructure - Kubernetes Cluster Setup" class="w-full h-auto rounded-lg shadow-lg mb-6" />
 
 You might wonder why we're not using a major cloud provider. Our decision to self-host the entire Skill-Wanderer platform is a strategic one, born from our guiding principles of resourcefulness and pragmatism. As a self-funded initiative with limited resources, this approach allows us to minimize operational costs significantly. This path is only possible because I have the technical ability to manage the infrastructure and reliable, high-speed internet access.
 
